--- a/TragicMagic/TragicMagic.csproj
+++ b/TragicMagic/TragicMagic.csproj
@@ -47,10 +47,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClampedValue.cs" />
+    <Compile Include="GameWands.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PulseSphere.cs" />
+    <Compile Include="PulseCircle.cs" />
     <Compile Include="Scene_Game.cs" />
+    <Compile Include="Wizard.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
