--- a/TragicMagic/TragicMagic.csproj
+++ b/TragicMagic/TragicMagic.csproj
@@ -46,8 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClampedSpeedValue.cs" />
     <Compile Include="ClampedValue.cs" />
     <Compile Include="GameWands.cs" />
+    <Compile Include="HUD.cs" />
+    <Compile Include="HUDElement_Leap.cs" />
+    <Compile Include="HUDHandler.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PulseCircle.cs" />
