--- a/TragicMagic/TragicMagic.csproj
+++ b/TragicMagic/TragicMagic.csproj
@@ -56,16 +56,17 @@
     <Compile Include="ClampedValue.cs" />
     <Compile Include="ComboSystem.cs" />
     <Compile Include="GameWands.cs" />
-    <Compile Include="HUD.cs" />
-    <Compile Include="HUDElement.cs" />
-    <Compile Include="HUDElement_Leap.cs" />
-    <Compile Include="HUDElement_Team.cs" />
-    <Compile Include="HUDElement_TeamMember.cs" />
-    <Compile Include="HUDHandler.cs" />
+    <Compile Include="HUD\base\HUD.cs" />
+    <Compile Include="HUD\base\HUDElement.cs" />
+    <Compile Include="HUD\HUDElement_ComboBar.cs" />
+    <Compile Include="HUD\HUDElement_Leap.cs" />
+    <Compile Include="HUD\HUDElement_Team.cs" />
+    <Compile Include="HUD\HUDElement_TeamMember.cs" />
+    <Compile Include="HUD\base\HUDHandler.cs" />
     <Compile Include="ParticleSystem.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PulseCircle.cs" />
+    <Compile Include="HUD\PulseCircle.cs" />
     <Compile Include="Scene_Game.cs" />
     <Compile Include="SpellInformation.cs" />
     <Compile Include="Tweetinvi.cs" />
