Game state entry
Added entry animation to wizards on game start
First test of using shaders

--- a/TragicMagic/TragicMagic.csproj
+++ b/TragicMagic/TragicMagic.csproj
@@ -82,6 +82,9 @@
       <Name>Otter</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="shaders\video.fs" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
