--- a/TragicMagic/TragicMagic.csproj
+++ b/TragicMagic/TragicMagic.csproj
@@ -33,9 +33,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="LeapCSharp.NET4.0, Version=0.0.0.0, Culture=neutral, PublicKeyToken=6e1b1368e71eba9b, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>.\LeapCSharp.NET4.0.dll</HintPath>
+    <Reference Include="LeapCSharp.NET4.0">
+      <HintPath>LeapDLL\LeapCSharp.NET4.0.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -45,10 +44,10 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="Tweetinvi">
-      <HintPath>Tweetinvi\Tweetinvi.dll</HintPath>
+      <HintPath>TweetinviDLL\Tweetinvi.dll</HintPath>
     </Reference>
     <Reference Include="Tweetinvi.Core">
-      <HintPath>Tweetinvi\Tweetinvi.Core.dll</HintPath>
+      <HintPath>TweetinviDLL\Tweetinvi.Core.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -69,6 +68,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HUD\PulseCircle.cs" />
     <Compile Include="Scene_Game.cs" />
+    <Compile Include="wizard\Spell.cs" />
     <Compile Include="wizard\SpellInformation.cs" />
     <Compile Include="Tweetinvi.cs" />
     <Compile Include="wizard\Wizard.cs" />
