Basic Spells Implemented
Example spells dust and fireball are implemented
Begin/end colours added to particle system to allow for fading between

--- a/TragicMagic/TragicMagic.csproj
+++ b/TragicMagic/TragicMagic.csproj
@@ -57,6 +57,7 @@
     <Compile Include="math\ClampedSpeedValue.cs" />
     <Compile Include="math\ClampedValue.cs" />
     <Compile Include="Particles\TragicParticleFile.cs" />
+    <Compile Include="spell\Spell_Dust.cs" />
     <Compile Include="spell\Spell_Fire.cs" />
     <Compile Include="TragicStateManager.cs" />
     <Compile Include="wizard\ComboSystem.cs" />
