--- a/TragicMagic/TragicMagic.csproj
+++ b/TragicMagic/TragicMagic.csproj
@@ -51,6 +51,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HUD\HUDElement_Key.cs" />
+    <Compile Include="HUD\HUDElement_Keyboard.cs" />
     <Compile Include="HUD\HUDElement_Outcome.cs" />
     <Compile Include="HUD\HUDElement_Score.cs" />
     <Compile Include="HUD\HUDElement_Timer.cs" />
